--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,5 @@ Create pipeline for extracting data for players for each league
 1. Extract player scouting report from FBref
 1.1 scout_summary & scout_full 
 1.2 See all stats above x% in scout report
+
+2. Plot data points from scout report
