--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,11 @@
 Create pipeline for extracting data for players for each league
-1. Extract player scouting report from FBref
-1.1 scout_summary & scout_full 
-1.2 See all stats above x% in scout report
+✅ 1. Extract player scouting report from FBref
+✅ 1.1 scout_summary & scout_full 
+✅ 1.2 See all stats above x% in scout report
 
-2. Plot data points from scout report
+✅ 2. Plot data points from scout report --> PowerBI
+✅ 2.1 Create script that transforms into more suitable csv file (; and ,)
+2.2 Add functionality to pipeline inside scraping
 
 For Windows
 git pull
