--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,9 @@ Create pipeline for extracting data for players for each league
 ✅ 1. Extract player scouting report from FBref
 ✅ 1.1 scout_summary & scout_full 
 ✅ 1.2 See all stats above x% in scout report
+1.3 Extract all 9 tables of player (stats_standard_dom_lg, stats_shooting_dom_lg, stats_passing_dom_lg, stats_passing_types_dom_lg, stats_gca_dom_lg, stats_defense_dom_lg, stats_possession_dom_lg, stats_playing_time_dom_lg, stats_misc_dom_lg)
+1.4 Per90
+1.5 Filter by season
 
 ✅ 2. Plot data points from scout report --> PowerBI
 ✅ 2.1 Create script that transforms into more suitable csv file (; and ,)
