--- a/TODO.txt
+++ b/TODO.txt
@@ -13,6 +13,8 @@ Create pipeline for extracting data for players for each league
 
 ✅ 3. Only calculate per90 for integer columns --> Not same order as merged, but doesn't matter as we still have the data
 
+4.0 Rescrape all data with filter before per90
+
 For Windows
 git pull
 python -m venv venv
